src/test/deca/syntax/valid/improvided/assign_int_int.deca
// Description :
//	Affectation d'un int a un autre int;
// Resultats :
//	ok

{
	int x = 3;
	int z;
	z = x;
}
