src/test/deca/syntax/invalid/improvided/caractere_invalid.deca
// Description : 
// 	utiliser un caractere invalide
// Resultats:
// 	Ligne 6 : "~" n'est pas un caractere valide
{
	int x = ~ 6;
}
